# json-pyformatter

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
json_pyformatter/: __init__.py  formatter.py
jsonformatter/: formatter.py
tests/: test.json  test_formatter.py
