[tool.poetry]
name = "json-pyformatter"
version = "0.0.1"
description = "Python logging module outputs logs as JSON."
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.3"
black = ">=19.10b0"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37', 'py38']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
